@@ -81,6 +81,8 @@ setting-preserve_session-tooltip=If checked, opening the Recipe Book will pick u
 setting-preserve_session=Preserve session [img=info]
 setting-show_alternate_name-tooltip=The object's alternate (internal) name will be shown in the object's tooltip. If `use internal names` is enabled, this will show the regular (localised) name.
 setting-show_alternate_name=Show alternate name [img=info]
+setting-show_descriptions-tooltip=Show object descriptions in tooltips.
+setting-show_descriptions=Show descriptions [img=info]
 setting-show_detailed_recipe_tooltips-tooltip=If enabled, a recipe's crafting time, ingredients, and products will be shown in its tooltip. Turn this off if searching causes performance problems.
 setting-show_detailed_recipe_tooltips=Show detailed recipe tooltips [img=info]
 setting-show_glyphs=Show object type glyphs
